# con-selfrag

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKUP_STRATEGY.md  CLEANUP_SUMMARY.md  CLI_IMPLEMENTATION_SUMMARY.md  DATA_STORAGE_COMPLETION_REPORT.md  MONITORING_COMPLETION_REPORT.md  Makefile  PHASE2_IMPLEMENTATION_REPORT.md  PHASE2_PERFORMANCE_PLAN.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_REFACTOR_PLAN.md  README.md  SYSTEM_SERVICES_FINAL_COMPLETION.md  TEMPLATE_STRUCTURE.md  TEST_REPORT.md  YAGNI_REVIEW.md  backend.yml  debug_postgres.py  debug_postgres.sh  debug_services.sh  diagnose_localai.sh  docker-compose.yml  fix_milestone2_issues.sh  frontend.yml  install_uv.sh  quick_fix.sh  quick_fix_venv.sh  quick_install_deps.sh  quick_test_step5.py  restart_debug.sh  run_localai_tests.sh  setup_test_env.sh  start_server.sh  test_debug_step3.sh  test_document.md  test_embedding.txt  test_enhancements.py  test_localai_client.sh  (+5 more)
.github/workflows/: ci.yml
backend/: API_DOCUMENTATION.md  Dockerfile  Dockerfile.lite  RAG_COMPLETION_SUMMARY.md  RAG_CONTEXT_ENHANCEMENT.md  RAG_IMPLEMENTATION.md  RAG_SUCCESS_SUMMARY.md  README.md  README_LOGGING.md  alembic.ini  cli_demo.sh  compile_grpc.sh  demo_rag.py  fix_docker_build.sh  localai-config-optimized.yaml  localai-config.yaml  logging_test_isolated.py  milestone3_test_results.json  pyproject.toml  qdrant_optimize.py  selfrag  selfrag_cli.py  setup_auth.sh  setup_cli.sh  setup_rag.sh  simple_logging_test.py  test_auth.py  test_auth_standalone.py  test_context_aware_query.py  test_debug_endpoints.py  test_endpoints.py  test_localai_client.py  test_localai_standalone.py  test_logging.py  test_logging_standalone.py  test_milestone2.py  test_milestone3.py  test_ml.txt  test_monitoring.py  test_rag_api.py  (+3 more)
backend/app/: __init__.py  config.py  localai_client.py  logging_utils.py  main.py  models.py  startup_check.py
backend/app/api/: __init__.py  v1.py
backend/app/api/schemas/: memory.py
backend/app/cli/: README.md  __init__.py  main.py
backend/app/database/: __init__.py  connection.py  models.py
backend/app/database/repositories/: memory_repository.py
backend/app/grpc/: __init__.py  server.py
backend/app/grpc/protos/: selfrag.proto
backend/app/middleware/: __init__.py  auth.py  error_handling.py  metrics.py  performance.py  rate_limiting.py  redaction.py
backend/app/models/: __init__.py  memory_models.py  request_models.py  response_models.py
backend/app/routes/: __init__.py  auth.py  debug.py  health.py  ingest.py  llm.py  memory_routes.py  metrics.py  query.py  rag.py  rate_limits.py  status.py
backend/app/services/: __init__.py  auth_service.py  cache_service.py  document_processor.py  embedding_service.py  ingest_service.py  memory_service.py  query_service.py  rate_limit_service.py  vector_service.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 001_auth_tables.py  002_auth_enhancements.py  003_add_memory_logs_table.py  004_memory_tables.py
backend/venv_rag/: pyvenv.cfg
docs/: API_REFERENCE.md  CLI_GUIDE.md  COMPREHENSIVE_GUIDE.md  DEPLOYMENT_GUIDE.md  README.md
frontend/: .gitkeep  README.md  package.json  pnpm-lock.yaml
frontend/src/app/mockup/claude4sonnet/: page.tsx
frontend/src/app/mockup/glm45/: page.tsx
frontend/src/app/mockup/infographic/: page.tsx
implementation-plans/: PHASE2_COMPLETION_ANALYSIS.md
qdrant_data/: raft_state.json
scripts/: backup.sh  health-check.sh  restore.sh
scripts/backup/: full_backup.sh  postgres_backup.sh  qdrant_backup.sh
scripts/postgres-init/: 01-init.sql
services/qdrant/: Dockerfile
shared/: types.py  types.ts
